@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/commons-dbcp
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-dbcp/ChangeLog,v 1.43 2008/01/27 19:22:53 betelgeuse Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-dbcp/ChangeLog,v 1.44 2009/11/08 21:01:12 caster Exp $
+
+*commons-dbcp-1.2.2-r1 (08 Nov 2009)
+
+  08 Nov 2009; Vlastimil Babka <caster@gentoo.org>
+  +commons-dbcp-1.2.2-r1.ebuild:
+  Revbump to remove dependency on 1.5 jdk - bug #292001.
 
   27 Jan 2008; Petteri Räty <betelgeuse@gentoo.org>
   commons-dbcp-1.2.2.ebuild:
